[package]
name = "gossip-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.0"
bs58 = "0.5.1"
crossbeam = "0.8.4"
ed25519-dalek = { version = "2.1.1", features = ["asm", "batch", "rand_core"]}
futures = "0.3.30"
num_cpus = "1.16.0"
rand = "0.8.5"
smol = "2.0.0"
smol-timeout = "0.6.0"
